--- a/android/app/src/main/res/layout/activity_appoint_academician.xml
+++ b/android/app/src/main/res/layout/activity_appoint_academician.xml
@@ -62,15 +62,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!--Akademisyen ata butonu-->
+    <Button
+        android:id="@+id/btnAppointAcademician"
+        android:layout_width="360dp"
+        android:layout_height="53dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#1A9AAF"
+        android:elevation="8dp"
+        android:onClick="appointAcademician"
+        android:text="Akademisyen Ata"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:translationZ="4dp"
+        app:cornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        tools:ignore="OnClick" />
+
     <!--Eklenen akademisyenler-->
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/selectedAcademiciansChipGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="7dp"
+        android:padding="5dp"
         app:singleLine="false"
         app:chipSpacing="8dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintTop_toBottomOf="@id/btnAppointAcademician"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
