--- a/android/app/src/main/res/layout/activity_contact_info.xml
+++ b/android/app/src/main/res/layout/activity_contact_info.xml
@@ -26,11 +26,11 @@
             android:id="@+id/gotoAcademician"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginTop="13dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="13dp"
             android:onClick="goToProfile"
             android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_gravity="center_vertical"
             tools:ignore="OnClick" />
 
         <TextView
@@ -59,173 +59,162 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:gravity="top"
             android:orientation="vertical"
             android:paddingTop="16dp"
             android:paddingBottom="32dp">
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="65dp"
+                android:text="İletişim Bilgileri"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="36dp"
+                tools:layout_editor_absoluteY="159dp" />
+
+            <EditText
+                android:id="@+id/phoneNumber"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="100dp"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Telefon Numarası"
+                android:inputType="number"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
+
+            <EditText
+                android:id="@+id/corporateNumber"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Kurumsal Telefon Numarası"
+                android:inputType="number"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Eposta Adresi"
+                android:inputType="textPersonName"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
+
+            <EditText
+                android:id="@+id/webSite"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Web Site Adresi(Opsiyonel)"
+                android:inputType="textPersonName"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <AutoCompleteTextView
+                    android:id="@+id/province"
+                    android:layout_width="0dp"
+                    android:layout_height="55dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_bg"
+                    android:clickable="true"
+                    android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:hint="İlinizi Seçin"
+                    android:inputType="none"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
+
+                <AutoCompleteTextView
+                    android:id="@+id/district"
+                    android:layout_width="0dp"
+                    android:layout_height="55dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_bg"
+                    android:clickable="true"
+                    android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:hint="İlçenizi Seçin"
+                    android:inputType="none"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/updateContact"
+                android:layout_width="360dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="400dp"
+                android:backgroundTint="#1A9AAF"
+                android:elevation="8dp"
+                android:text="Güncelle"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:translationZ="4dp"
+                app:cornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
+                tools:ignore="OnClick"
+                tools:layout_editor_absoluteY="368dp" />
 
-                <TextView
-                    android:layout_width="275dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:text="İletişim"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    tools:layout_editor_absoluteX="36dp"
-                    tools:layout_editor_absoluteY="159dp" />
-
-                <EditText
-                    android:id="@+id/phoneNumber"
-                    android:layout_width="360dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edittext_bg"
-                    android:hint="Telefon Numarası"
-                    android:inputType="number"
-                    android:padding="12dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#999999"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    tools:layout_editor_absoluteX="35dp"
-                    tools:layout_editor_absoluteY="211dp" />
-
-                <EditText
-                    android:id="@+id/corporateNumber"
-                    android:layout_width="360dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edittext_bg"
-                    android:hint="Kurumsal Telefon Numarası"
-                    android:inputType="number"
-                    android:padding="12dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#999999"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    tools:layout_editor_absoluteX="35dp"
-                    tools:layout_editor_absoluteY="211dp" />
-
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_width="360dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edittext_bg"
-                    android:hint="Eposta Adresi"
-                    android:inputType="textPersonName"
-                    android:padding="12dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#999999"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    tools:layout_editor_absoluteX="35dp"
-                    tools:layout_editor_absoluteY="211dp" />
-
-                <EditText
-                    android:id="@+id/webSite"
-                    android:layout_width="360dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edittext_bg"
-                    android:hint="Web Site Adresi(Opsiyonel)"
-                    android:inputType="textPersonName"
-                    android:padding="12dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#999999"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    tools:layout_editor_absoluteX="35dp"
-                    tools:layout_editor_absoluteY="211dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <AutoCompleteTextView
-                        android:id="@+id/province"
-                        android:layout_width="0dp"
-                        android:layout_height="55dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/edittext_bg"
-                        android:clickable="true"
-                        android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:hint="İlinizi Seçin"
-                        android:inputType="none"
-                        android:padding="12dp"
-                        android:textColor="#000000"
-                        android:textColorHint="#999999"
-                        android:textSize="16sp"
-                        android:textStyle="normal" />
-
-                    <AutoCompleteTextView
-                        android:id="@+id/district"
-                        android:layout_width="0dp"
-                        android:layout_height="55dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/edittext_bg"
-                        android:clickable="true"
-                        android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:hint="İlçenizi Seçin"
-                        android:inputType="none"
-                        android:padding="12dp"
-                        android:textColor="#000000"
-                        android:textColorHint="#999999"
-                        android:textSize="16sp"
-                        android:textStyle="normal" />
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/updateContact"
-                    android:layout_width="360dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="20dp"
-                    android:backgroundTint="#1A9AAF"
-                    android:elevation="8dp"
-                    android:fontFamily="monospace"
-                    android:text="Güncelle"
-                    android:textColor="#FFFFFF"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:translationZ="4dp"
-                    app:cornerRadius="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="OnClick"
-                    tools:layout_editor_absoluteY="368dp" />
-
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
