--- a/android/app/src/main/res/layout/activity_pending_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_pending_request_detail.xml
@@ -127,7 +127,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="7dp"
                             android:text="📧 firma maili"
-                            android:textColor="#666666"
+                            android:textColor="#3F51B5"
                             android:textSize="13sp" />
 
                         <TextView
@@ -268,13 +268,12 @@
 
             </com.google.android.material.card.MaterialCardView>
 
-
             <!--Butonlar-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="300dp"
+                android:layout_marginBottom="400dp"
                 android:orientation="horizontal"
                 android:layout_gravity="center_horizontal"
                 android:padding="5dp"
@@ -322,6 +321,7 @@
                     tools:ignore="OnClick"
                     tools:layout_editor_absoluteY="368dp" />
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
